# mos

./: .dir-locals.el  .gitignore  README.org  cross  meson.build  native
arch/x86/: meson.build
arch/x86/boot/: asm.h  header.S  header.asm  meson.build
include/mos/: types.h
scripts/gdb/: gdbinit
